--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,5 +1,13 @@
 .App {
-  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  background: black;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .App-logo {
