--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,7 +1,7 @@
 .App {
   font-family: 'Poppins', sans-serif;
   font-size: 20px;
-  background: black;
+  background: orange;
   height: 100vh;
   width: 100vw;
   display: flex;
