--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,12 +1,12 @@
 .App {
   font-family: 'Poppins', sans-serif;
   font-size: 20px;
-  background: orange;
-  height: 100vh;
+  background: black;
+  min-height: 100vh;
+  height: auto;
   width: 100vw;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
 }
 
